[package]
name = "echalotte"
version = "0.1.0"
authors = ["Bastien Teinturier <bastien.teinturier@outlook.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hmac = "0.7.1"
sha2 = "0.8.1"
chacha20 = "0.3.3"

[dev-dependencies]
hex = "0.4.0"
rand = "0.7.3"
