[package]
name = "echalotte"
version = "0.1.0"
authors = ["Bastien Teinturier <bastien.teinturier@outlook.com>"]
edition = "2018"

[dependencies]
chacha20 = "0.3.3"
curve25519-dalek = "2.0.0"
hmac = "0.7.1"
rand = "0.7.3"
sha2 = "0.8.1"
zeroize = { version = "1.1.0", default-features = false, features = ["zeroize_derive"] }

[dev-dependencies]
hex = "0.4.0"
rand = "0.7.3"
